--- a/index.html
+++ b/index.html
@@ -15,79 +15,79 @@
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="home.css">
-
-  
 </head>
 <body class="light-mode">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-            <a class="navbar-brand" href="#">Maoui Yaghmourassen</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="skills.html">Skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="experience.html">Experience</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="resume.html">Resume</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    <!-- Theme Toggle Button -->
-                    <li class="nav-item lg:ml-7 sm:ml-0">
-                        <a class="nav-link" href="#" id="theme-toggle">
-                            <i class="fas fa-sun" id="sun-icon"></i>
-                            <i class="fas fa-moon d-none" id="moon-icon"></i>
-                        </a>
-                    </li>
-                </ul>
+    <div class="d-flex flex-column min-vh-100">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container">
+                <a class="navbar-brand" href="#">Maoui Yaghmourassen</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About Me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="skills.html">Skills</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="experience.html">Experience</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="resume.html">Resume</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                        <!-- Theme Toggle Button -->
+                        <li class="nav-item lg:ml-7 sm:ml-0">
+                            <a class="nav-link" href="#" id="theme-toggle">
+                                <i class="fas fa-sun" id="sun-icon"></i>
+                                <i class="fas fa-moon d-none" id="moon-icon"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
-
-
-    <header class="bg-cover bg-center h-screen flex items-center justify-between p-8" >
-        <div class="flex flex-col justify-center max-w-lg">
-            <h1 class="text-4xl md:text-5xl font-bold mb-4 ">Hello everyone, I am Maoui Yaghmourassen</h1>
-            <p class="text-lg md:text-xl mb-6">
-                I am a software engineer skilled in various types of applications. I can create professional
-                 websites wiches bulid withe HTML,CSS,JS,PHP,MYSQL and her framworks, mobile applications, and desktop applications,
-                  especially those built using the JAVA and DART
-                 programming language. In addition to this, I have mastered other side skills. I am proficient in
-                  Microsoft Office programs, have expertise in marketing, and am well-versed in the hardware and software aspects of computers.</p>
-            <div class="flex space-x-4 mb-4">
-                <a href="https://www.linkedin.com" class=""><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.facebook.com" class="t"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.hsoub.com" class=""><i class="fas fa-globe"></i></a>
+        <header class="bg-cover bg-center h-screen flex items-center justify-between p-8">
+            <div class="flex flex-col justify-center max-w-lg">
+                <h1 class="text-4xl md:text-5xl font-bold mb-4">Hello everyone, I am Maoui Yaghmourassen</h1>
+                <p class="text-lg md:text-xl mb-6">
+                    I am a software engineer skilled in various types of applications. I can create professional
+                    websites with HTML, CSS, JS, PHP, MySQL and their frameworks, mobile applications, and desktop applications,
+                    especially those built using the Java and Dart programming languages. Additionally, I am proficient in
+                    Microsoft Office programs, have expertise in marketing, and am well-versed in the hardware and software aspects of computers.
+                </p>
+                <div class="flex space-x-4 mb-4">
+                    <a href="https://www.linkedin.com" class=""><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.facebook.com" class="t"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.hsoub.com" class=""><i class="fas fa-globe"></i></a>
+                </div>
             </div>
-        </div>
-        <img src="didou.jpg" alt="Profile Image" class="hidden lg:block w-1/3 h-auto object-cover">
-    </header>
+            <img src="didou.jpg" alt="Profile Image">
+        </header>
 
-    <!-- Footer -->
-    <footer class="bg-dark  py-4">
-        <div class="container text-center">
-            <p>&copy; 2024 Your Name. All Rights Reserved.</p>
-        </div>
-    </footer>
+        <!-- Main Content -->
+        <main class="flex-grow">
+            <!-- Your main content goes here -->
+        </main>
 
-    <!-- Bootstrap JS -->
+        <!-- Footer -->
+        <footer class="bg-dark text-white py-4">
+            <div class="container text-center">
+                <p class="mb-0">&copy; 2024 Maoui Yaghmourassen. All Rights Reserved.</p>
+            </div>
+        </footer>
+    </div>
 
-    
     <!-- Custom JS -->
     <script src="home.js"></script>
 </body>
